# CodeProofTheArena

./: CodeProofTheArena.lean  README.md  alembic.ini  deploy.sh  dotenv.example  lake-manifest.json  lakefile.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 1fe89fc6a18f_add_owner_id_to_challenges.py  2d62d4517dce_update_submissions.py  3284fb1b9b67_add_theorem2_signature_to_challenges.py  4701dab251fc_add_user_and_challenge_models.py  4b777e24b130_add_display_name_to_user_model.py  5169b67d6dcc_add_proof2_and_related_fields_to_.py  5bd0e0a04e0c_create_submissions_table.py  bb314d1e428a_create_users_table.py  c8d943b1cdb2_create_submissions_table.py  d774e9296d79_create_submissions_table.py
app/: main.py
app/api/: deps.py
app/api/endpoints/: auth.py  challenges.py  submissions.py
app/core/: config.py  security.py
app/crud/: __init__.py  challenge.py  submission.py  user.py
app/db/: session.py
app/models/: __init__.py  challenge.py  submission.py  user.py
app/schemas/: __init__.py  challenge.py  submission.py  token.py  user.py
app/services/: judge.py
app/templates/: base.html  challenge_detail.html  challenge_submissions.html  challenges.html  create_challenge.html  edit_challenge.html  index.html  login.html  register.html  submission_detail.html
scripts/: easy.jsonl  import_challenges.py
static/css/: styles.css
