[tool.poetry]
name = "codeproofarena"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
SQLAlchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.10"
pydantic-settings = "^2.5.2"
jinja2 = "^3.1.4"
bcrypt = "3.2.0"
itsdangerous = "^2.2.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
